fix overlap being too small

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -37,7 +37,7 @@ footer {
   -webkit-font-smoothing:subpixel-antialiased;
 }
 
-@media print, screen and (max-width: 960px) {
+@media print, screen and (max-width: 1075px) {
 
   div.wrapper {
     width:auto;
